@@ -41,7 +41,7 @@
 # that is actually run.
 # -----------------------------------------------------------------------------
 
-AC_INIT([Tweek], [0.19], [vrjuggler-devel@lists.sourceforge.net])
+AC_INIT([Tweek], [0.20], [vrjuggler-devel@lists.sourceforge.net])
 AC_CONFIG_HEADERS([tweek/tweekDefines.h])
 AC_PREREQ([2.53])
 AC_COPYRIGHT([VR Juggler is (C) Copyright 1998-2003 by Iowa State University])
