@@ -39,9 +39,7 @@ package org.vrjuggler.tweek.gui;
 import java.awt.*;
 import java.awt.event.*;
 import java.net.InetAddress;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Vector;
+import java.util.*;
 import javax.swing.*;
 import javax.swing.filechooser.FileFilter;
 import javax.swing.tree.DefaultTreeModel;
@@ -49,6 +47,7 @@ import javax.swing.tree.DefaultMutableTreeNode;
 import org.vrjuggler.tweek.TweekCore;
 import org.vrjuggler.tweek.beans.*;
 import org.vrjuggler.tweek.beans.loader.BeanJarClassLoader;
+import org.vrjuggler.tweek.event.*;
 import org.vrjuggler.tweek.net.CommunicationEvent;
 import org.vrjuggler.tweek.net.CommunicationListener;
 import org.vrjuggler.tweek.net.corba.*;
@@ -59,7 +58,7 @@ import org.vrjuggler.tweek.text.*;
 /**
  * The mediator for the whole GUI.  This holds an instance of
  * org.vrjuggler.tweek.BeanContainer which in turn holds the JavaBeans loaded
- * at runtime.  Events generated by this frame are dispatched to the Beans
+ * at run time.  Events generated by this frame are dispatched to the Beans
  * through the org.vrjuggler.tweek.BeanContainer instance.
  *
  * @version $Revision$
@@ -72,10 +71,11 @@ public class TweekFrame
             , MessageAdditionListener
             , BeanInstantiationListener
             , GlobalPrefsUpdateListener
+            , WindowListener
 {
    public TweekFrame(MessageDocument msgDocument)
    {
-      enableEvents(AWTEvent.WINDOW_EVENT_MASK);
+      addWindowListener(this);
 
       // This needs to be done as early as possible so that we receive events
       // that happen during initialization.
@@ -103,18 +103,20 @@ public class TweekFrame
       // events, query the list of existing Beans.  We need to make sure that
       // we know about any existing Beans that implement the BeanPreferences
       // interface.
-      List known_beans =
+      java.util.List known_beans =
          BeanRegistry.instance().getBeansOfType(TweekBean.class.getName());
 
-      Iterator i = known_beans.iterator();
-      TweekBean bean;
-
-      while ( i.hasNext() )
+      for ( Iterator i = known_beans.iterator(); i.hasNext(); )
       {
-         bean = (TweekBean) i.next();
-         if ( bean.getBean() instanceof BeanPreferences )
+         Object bean = ((TweekBean) i.next()).getBean();
+         if ( bean instanceof BeanPreferences )
          {
-            addPrefsBean((BeanPreferences) bean.getBean());
+            addPrefsBean((BeanPreferences) bean);
+         }
+
+         if ( bean instanceof TweekFrameListener )
+         {
+            addTweekFrameListener((TweekFrameListener) bean);
          }
       }
 
@@ -161,7 +163,8 @@ public class TweekFrame
     */
    private void loadFirstViewerBean()
    {
-      List viewers = BeanRegistry.instance().getBeansOfType(ViewerBean.class.getName());
+      java.util.List viewers =
+         BeanRegistry.instance().getBeansOfType(ViewerBean.class.getName());
 
       if ( viewers.size() > 0 )
       {
@@ -348,6 +351,11 @@ public class TweekFrame
          addPrefsBean((BeanPreferences) new_bean);
          mMenuPrefsBeanEdit.setEnabled(true);
       }
+
+      if ( new_bean instanceof TweekFrameListener )
+      {
+         addTweekFrameListener((TweekFrameListener) new_bean);
+      }
    }
 
    /**
@@ -394,7 +402,7 @@ public class TweekFrame
                SwingUtilities.updateComponentTreeUI(this);
 
                // Update all the loaded Beans.
-               List beans =
+               java.util.List beans =
                   BeanRegistry.instance().getBeansOfType(PanelBean.class.getName());
                Iterator i = beans.iterator();
                PanelBean cur_bean;
@@ -476,9 +484,126 @@ public class TweekFrame
       fileQuitAction(null);
    }
 
+   public synchronized void addTweekFrameListener(TweekFrameListener l)
+   {
+      mFrameListeners.add(l);
+   }
+
+   public synchronized void removeTweekFrameListener(TweekFrameListener l)
+   {
+      mFrameListeners.remove(l);
+   }
+
+   public void windowActivated(WindowEvent e)
+   {
+      fireFrameFocused(new TweekFrameEvent(e.getWindow(), e.getID(),
+                                           e.getOppositeWindow()));
+   }
+
+   public void windowClosed(WindowEvent e)
+   {
+      fireFrameClosed(new TweekFrameEvent(e.getWindow(), e.getID()));
+   }
+
+   public void windowClosing(WindowEvent e)
+   {
+      if ( fireFrameClosing(new TweekFrameEvent(e.getWindow(), e.getID())) )
+      {
+         dispose();
+      }
+   }
+
+   public void windowDeactivated(WindowEvent e)
+   {
+      fireFrameUnfocused(new TweekFrameEvent(e.getWindow(), e.getID(),
+                                             e.getOppositeWindow()));
+   }
+
+   public void windowDeiconified(WindowEvent e)
+   {
+      fireFrameDeiconified(new TweekFrameEvent(e.getWindow(), e.getID()));
+   }
+
+   public void windowIconified(WindowEvent e)
+   {
+      fireFrameIconified(new TweekFrameEvent(e.getWindow(), e.getID()));
+   }
+
+   public void windowOpened(WindowEvent e)
+   {
+      fireFrameOpened(new TweekFrameEvent(e.getWindow(), e.getID()));
+   }
+
    // =========================================================================
    // Private methods.
    // =========================================================================
+
+   private synchronized void fireFrameOpened(TweekFrameEvent e)
+   {
+      for ( Iterator i = mFrameListeners.iterator(); i.hasNext(); )
+      {
+         TweekFrameListener l = (TweekFrameListener) i.next();
+         l.frameOpened(e);
+      }
+   }
+
+   private synchronized void fireFrameClosed(TweekFrameEvent e)
+   {
+      for ( Iterator i = mFrameListeners.iterator(); i.hasNext(); )
+      {
+         TweekFrameListener l = (TweekFrameListener) i.next();
+         l.frameClosed(e);
+      }
+   }
+
+   private synchronized boolean fireFrameClosing(TweekFrameEvent e)
+   {
+      boolean result = true;
+
+      for ( Iterator i = mFrameListeners.iterator(); i.hasNext(); )
+      {
+         TweekFrameListener l = (TweekFrameListener) i.next();
+         result = (l.frameClosing(e) && result);
+      }
+
+      return result;
+   }
+
+   private synchronized void fireFrameDeiconified(TweekFrameEvent e)
+   {
+      for ( Iterator i = mFrameListeners.iterator(); i.hasNext(); )
+      {
+         TweekFrameListener l = (TweekFrameListener) i.next();
+         l.frameDeiconified(e);
+      }
+   }
+
+   private synchronized void fireFrameFocused(TweekFrameEvent e)
+   {
+      for ( Iterator i = mFrameListeners.iterator(); i.hasNext(); )
+      {
+         TweekFrameListener l = (TweekFrameListener) i.next();
+         l.frameFocused(e);
+      }
+   }
+
+   private synchronized void fireFrameIconified(TweekFrameEvent e)
+   {
+      for ( Iterator i = mFrameListeners.iterator(); i.hasNext(); )
+      {
+         TweekFrameListener l = (TweekFrameListener) i.next();
+         l.frameIconified(e);
+      }
+   }
+
+   private synchronized void fireFrameUnfocused(TweekFrameEvent e)
+   {
+      for ( Iterator i = mFrameListeners.iterator(); i.hasNext(); )
+      {
+         TweekFrameListener l = (TweekFrameListener) i.next();
+         l.frameUnfocused(e);
+      }
+   }
 
    /**
     * Adds the given Bean to the collection of Beans that have editable
@@ -792,23 +917,6 @@ public class TweekFrame
       mMenuHelp.setMnemonic('H');
    }
 
-   // =========================================================================
-   // Protected methods.
-   // =========================================================================
-
-   /**
-    * Overridden so we can exit when window is closed.
-    */
-   protected void processWindowEvent (WindowEvent e)
-   {
-      super.processWindowEvent(e);
-
-      if (e.getID() == WindowEvent.WINDOW_CLOSING)
-      {
-         fileQuitAction(null);
-      }
-   }
-
    // ========================================================================
    // Private methods.
    // ========================================================================
@@ -816,15 +924,19 @@ public class TweekFrame
    /**
     * File | Open action performed.
     */
-   private void fileOpenAction (ActionEvent e)
+   private void fileOpenAction(ActionEvent e)
    {
-      if ( mFileLoader.openRequested() )
+      System.out.println("TweekFrame.fileOpenAction() called");
+      if ( null != mFileLoader )
       {
-         mMenuFileClose.setEnabled(true);
-
-         if ( ! mFileLoader.canOpenMultiple() )
+         if ( mFileLoader.openRequested() )
          {
-            mMenuFileOpen.setEnabled(false);
+            mMenuFileClose.setEnabled(true);
+
+            if ( ! mFileLoader.canOpenMultiple() )
+            {
+               mMenuFileOpen.setEnabled(false);
+            }
          }
       }
    }
@@ -864,12 +976,9 @@ public class TweekFrame
    /**
     * File | Quit action performed.
     */
-   private void fileQuitAction (ActionEvent e)
+   private void fileQuitAction(ActionEvent e)
    {
-      if ( mBeanContainer != null )
-      {
-         mBeanContainer.fireFrameClosed();
-      }
+      fireFrameClosing(new TweekFrameEvent(this, WindowEvent.WINDOW_CLOSING));
 
       for ( int i = 0; i < mORBs.size(); i++ )
       {
@@ -1081,6 +1190,7 @@ public class TweekFrame
    // ========================================================================
 
    private boolean mPackFrame = false;
+   private java.util.List mFrameListeners = new ArrayList();
 
    // GUI objects.
    private JPanel        mContentPane       = null;    /**< Top-level container */
